--- a/cv.css
+++ b/cv.css
@@ -18,6 +18,7 @@ body{
     background-color: var(--clr-backround);
     padding-bottom: 2em;
     border-radius: 8px;
+    margin-top: 2em;
 }
 
 #img-placeholder{
