--- a/cv.css
+++ b/cv.css
@@ -1,5 +1,5 @@
 :root{
-    --clr-primary: #eaf2ff;
+    --clr-primary: #eaf1ff;
     --clr-backround : #e0e0e0;
 }
 
@@ -26,6 +26,10 @@ body{
     height: 150px;
     background-color: rgb(60, 60, 60);
     border-radius: 50%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 h1{margin-bottom: 5px; padding-bottom: 5px;}
