--- a/cv.css
+++ b/cv.css
@@ -33,7 +33,7 @@ body{
     justify-content: center;
 }
 
-h1{margin-bottom: 5px; padding-bottom: 5px;}
+h1{margin-bottom: 5px; padding-bottom: 5px; font-size: 1.5em;}
 h1, h3{
     border-bottom: 1px solid black;
     text-align: center;
