--- a/cv.css
+++ b/cv.css
@@ -70,6 +70,7 @@ section:not(.cv-wrapper), section:not(.cv-wrapper)>div{
 
 #cv{
     padding-bottom: 2em;
+    min-width: 200px;
     max-width: 200px;
     align-self: center;
 }
