--- a/cv.css
+++ b/cv.css
@@ -30,9 +30,10 @@ body{
     flex-direction: column;
     margin: 10px;
     width: 100%;
-    max-width: 600px;
+    max-width: 650px;
     border-radius: 8px;
     align-items: center;
+    justify-content: space-evenly;
 }
 
 h1{margin-bottom: 5px; padding-bottom: 5px; width: 200px; font-size: 1.3em;}
@@ -41,30 +42,47 @@ h1, h3{
     text-transform: uppercase;
     text-align: center;
 }
-h3{width: 150px; margin-bottom: 5px; padding-bottom: 5px;}
+h3{margin-bottom: 20px; width: 75%;}
 
 #profile{
     background-color: var(--clr-backround);
-    width: 100%;
     border-radius: .5em;
-    padding: 2em;
+    width: 100%;
+    padding: 3em 0;
 }
-
-#profile, #qualifications, div{
+#profile, #profile div{
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
 }
 
-#profile div{align-items: center;}
+#profile>div>div:not(#head){
+    width: 180px;
+}
+#head{margin-bottom: 3em;}
+
 #background{
     background-color: var(--clr-primary);
-    width: min-content;
-    height: 680px;
+    height: 730px;
     padding: 2em;
     border-radius: 1em;
 }
+
+#qualifications{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    height: 680px;
+    margin: 3em 0;
+}
+#qualifications>div{
+    display: flex;
+    flex-direction: column;
+    width: 200px;
+}
+
 
 
 /*#region Text placement*/
@@ -97,10 +115,10 @@ h3{width: 150px; margin-bottom: 5px; padding-bottom: 5px;}
 
 #website{display: none;}
 
-@media (min-width: 600px) {
+@media (min-width: 530px) {
+    #profile{width: unset;}
     .cv-wrapper {
         flex-direction: row;
-        
         background-color: var(--clr-backround);
     }
 }
