--- a/cv.css
+++ b/cv.css
@@ -35,14 +35,19 @@ body{
     align-items: center;
     justify-content: space-evenly;
 }
-
+#document-title{text-align: center; font-size: 2em;}
 h1{margin-bottom: 5px; padding-bottom: 5px; width: 200px; font-size: 1.3em;}
-h1, h3{
+h1:not(#document-title), h3{
     border-bottom: 1px solid black;
     text-transform: uppercase;
     text-align: center;
 }
-h3{margin-bottom: 20px; width: 75%;}
+h3{width: 75%; opacity: 75%;}
+h1, h3{
+    font-family: 'Aboreto', cursive;
+    font-family: 'Lato', sans-serif;
+    font-weight: 400;
+}
 
 #profile{
     background-color: var(--clr-backround);
@@ -53,37 +58,33 @@ h3{margin-bottom: 20px; width: 75%;}
 #profile, #profile div{
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
     align-items: center;
 }
 
 #profile>div>div:not(#head){
     width: 180px;
 }
-#head{margin-bottom: 3em;}
 
 #background{
     background-color: var(--clr-primary);
-    height: 730px;
+    height: 930px;
     padding: 2em;
     border-radius: 1em;
+    justify-content: space-between;
 }
 
 #qualifications{
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
-    height: 680px;
-    margin: 3em 0;
+    justify-content: space-around;
+    margin: 2em 0;
+    height: 950px;
 }
 #qualifications>div{
     display: flex;
     flex-direction: column;
     width: 200px;
 }
-
-
 
 /*#region Text placement*/
 
@@ -92,6 +93,17 @@ h3{margin-bottom: 20px; width: 75%;}
 }
 #about{
     width: 180px;
+}
+
+div .title:first-of-type{
+    margin-top: 0;
+}
+
+.vertical-indent{
+    height: 20px;
+    margin: 5px 0;
+    border-left: 3px dotted black;
+    opacity: 30%;
 }
 
 /*#endregion*/
@@ -114,6 +126,7 @@ h3{margin-bottom: 20px; width: 75%;}
 /*#endregion*/
 
 #website{display: none;}
+#references{display: none;}
 
 @media (min-width: 530px) {
     #profile{width: unset;}
