--- a/cv.css
+++ b/cv.css
@@ -67,7 +67,7 @@ h1, h3{
 
 #background{
     background-color: var(--clr-primary);
-    height: 930px;
+    height: 800px;
     padding: 2em;
     border-radius: 1em;
     justify-content: space-between;
@@ -78,7 +78,7 @@ h1, h3{
     flex-direction: column;
     justify-content: space-around;
     margin: 2em 0;
-    height: 950px;
+    height: 800px;
 }
 #qualifications>div{
     display: flex;
@@ -100,8 +100,8 @@ div .title:first-of-type{
 }
 
 .vertical-indent{
-    height: 20px;
-    margin: 5px 0;
+    height: 25px;
+    margin: 2px 1px;
     border-left: 3px dotted black;
     opacity: 30%;
 }
@@ -125,8 +125,11 @@ div .title:first-of-type{
 
 /*#endregion*/
 
-#website{display: none;}
-#references{display: none;}
+#website,
+#references, #references *,
+#socials, #socials *,
+#img-placeholder
+{display: none;}
 
 @media (min-width: 530px) {
     #profile{width: unset;}
