--- a/Blog/Blogposts/skolestart.css
+++ b/Blog/Blogposts/skolestart.css
@@ -1,4 +1,5 @@
 body {margin: 0;}
+.hide {display: hidden;}
 
 h1, h3 { text-align: center; }
 
@@ -11,7 +12,7 @@ h1, h3 { text-align: center; }
 .intro{
     display: inline-block;
     background-color: aliceblue;
-    border-radius: 1em;
+    border-radius: 6px;
     padding: 1em;
     margin: 1em;
     text-align: justify;
@@ -20,36 +21,47 @@ h1, h3 { text-align: center; }
 
 iframe{display: none;}
 
+/* #region Søknader */
 #søknader {
     display: flex;
     flex-direction: column;
 }
 #søknader>span{
+    border-radius: 4px;
     font-size: smaller;
     margin: 1em;
     padding: 1em;
     background-color: rgb(235, 191, 186);
     color: rgb(68, 55, 37);
-    height: 100px;
     overflow: hidden;
     position: relative;
+
+    height: 100px;
 }
+.expanded{height: auto;}
 
 .extender{
+    display: flex;
     position: absolute;
     bottom: 0;
-    background-color: rgba(0, 0, 0, 0.247);
+    background-color: rgba(0, 0, 0, 0.544);
     color: white;
     width: 100%;
     height: 2em;
     text-align: center;
     margin-left: -1em;
+    align-items: center;
+    justify-content: center;
 }
 dot{
-    width: 2px;
-    height: 2px;
-    background-color: aqua;
+    display: inline-block;
+    width: 8px;
+    height: 8px;
+    background-color: rgb(233, 200, 200);
+    border-radius: 100%;
+    margin: 3px;
 }
+/* #endregion */
 
 .bg-wrap { background: rgb(215, 223, 232);}
 
