--- a/Blog/style.css
+++ b/Blog/style.css
@@ -3,7 +3,7 @@ body {margin: 0;}
 .main-grid{
     display: grid;
     grid-gap: 0 1em;
-    grid-template-columns: 1fr;
+    grid-template-columns: 0 1fr 0;
     grid-template-rows: auto;
     grid-template-areas: 
     "n n n"
