--- a/Blog/Blogposts/skolestart.css
+++ b/Blog/Blogposts/skolestart.css
@@ -1,47 +1,20 @@
-body {margin: 0;}
+body {margin: 0; font-family: 'Dosis', sans-serif;}
 .hide {display: hidden;}
 
-h1, h3 { text-align: center; }
+:root{
+    --clr-button: rgb(193, 193, 193);
+}
 
-.post{
+h1, h3 { text-align: center;}
+
+.page{
     display: flex;
-    flex-direction: column;
+    min-height: 100vh;
     align-items: center;
+    justify-content: center;
 }
 
-.intro{
-    display: inline-block;
-    background-color: aliceblue;
-    border-radius: 6px;
-    padding: 1em;
-    margin: 1em;
-    text-align: justify;
-    max-width: 340px;
-}
-
-/* #region iframe manipulation */
-
-.collapsed:not(.expanded) iframe{
-    pointer-events: none;
-    filter: brightness(45%);
-    background-color: rgb(214, 214, 214);
-}
-
-/* #endregion */
-
-#søknader {
-    display: flex;
-    flex-direction: column;
-}
-#søknader>span{
-    max-width: 450px;
-    font-size: smaller;
-    background-color: rgb(235, 191, 186);
-    color: rgb(68, 55, 37);
-    padding: 1em;
-    margin: 1em;
-    border-radius: 4px;
-}
+.page:nth-of-type(1){background-color: salmon;}
 
 /* #region Collapsibles */
 
@@ -49,7 +22,7 @@ h1, h3 { text-align: center; }
     overflow: hidden;
     position: relative;
 }
-.collapsed:not(.expanded){max-height: 100px;}
+.collapsed:not(.expanded){max-height: 110px; cursor: pointer;}
 .expanded .extension-indicator{display: none;}
 .extension-indicator{
     display: flex;
@@ -74,7 +47,64 @@ dot{
 }
 /* #endregion */
 
+.post{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.intro{
+    display: inline-block;
+    background-color: aliceblue;
+    border-radius: 6px;
+    padding: 1em;
+    margin: 1em;
+    text-align: justify;
+    max-width: 340px;
+}
+
+/* #region iframe manipulation */
+
+.collapsed:not(.expanded) iframe{
+    pointer-events: none;
+    filter: brightness(45%);
+    background-color: rgb(214, 214, 214);
+}
+.embedded-cv{margin: 1em; border-radius: 5px;}
+iframe{height: calc(100vh - 4em); width: 100%;}
+.cv.resized{width: 300px;}
+.cv{
+    width: 100%; 
+    transition: width .4s ease;
+    background-color: aliceblue;
+}
+#embedded-cv-slider{
+    box-sizing: border-box;
+    width: 50%;
+    outline: none;
+}
+
+/* #endregion */
+
+#søknader {
+    display: flex;
+    flex-direction: column;
+}
+#søknader>span{
+    max-width: 450px;
+    font-size: smaller;
+    background-color: rgb(235, 191, 186);
+    color: rgb(68, 55, 37);
+    padding: 1em;
+    margin: 1em;
+    border-radius: 4px;
+}
+
 /* Responsive */
 /* Mobile-first design */
-.hide-on-browser {display: none;}
-.hide-on-mobile {display: none;}
+@media screen and (max-width: 500px){
+    #embedded-cv-slider {display: none;}
+}
+@media screen and (min-width: 500px){
+    .cv{width: 50%;}
+}
