--- a/Blog/style.css
+++ b/Blog/style.css
@@ -38,7 +38,7 @@ iframe{width: 100%; height: 100%;}
 
 @media screen and (min-width: 640px) {
     .main-grid{
-        grid-template-columns: 1fr 10fr 2fr;
+        grid-template-columns: 10px 5fr 1fr;
         grid-template-rows: auto auto 12fr 1fr;
         grid-template-areas: 
         "n n n"
