--- a/Blog/Blogposts/page-layout.css
+++ b/Blog/Blogposts/page-layout.css
@@ -1,11 +1,15 @@
 body{
     margin: 0; 
+    height: 100vh;
+    width: 100vw;
     display: flex; 
     flex-direction: column; 
     font-family: 'Dosis', sans-serif; 
     overflow: hidden;
+    position: fixed;
 
-    background-color: salmon;
+    background-color: #233748;
+    transition: background-color 1.4s ease;
 }
 * {box-sizing: border-box;}
 
@@ -23,25 +27,27 @@ body{
 .progress{
     width: 10px;
     min-height: 10px;
-    background-color: rgba(3, 3, 255, 0.155);
+    background-color: rgba(13, 5, 17, 0.347);
     border-radius: 1em;
 }
 
 .page{
     display: flex;
+    flex-direction: column;
     position: absolute;
     height: 100vh;
     width: 100vw;
     justify-content: center;
     align-items: center;
     overflow: hidden;
+    padding: 2em;
 
+    transform: scale(.3, .2);
     top: 100vh;
-    transition: top 2s ease, opacity .5s ease;
+    opacity: 0%;
+    transition: top 1.75s ease, opacity 0.5s ease, transform 1.3s ease;
 }
 
-.target{top:0 !important;}
-.fade{
-    opacity: 0; 
-    top: -20vh !important;
-}
+.above{top:-100vh;}
+.below{top: 100vh;}
+.target{top: 0; opacity: 100%; transform: scale(100%)}
