--- a/Blog/Blogposts/August-2022/page-layout.css
+++ b/Blog/Blogposts/August-2022/page-layout.css
@@ -70,7 +70,7 @@ body{
     transform: scale(.3, .2);
     top: 100vh;
     opacity: 0%;
-    transition: top 1.3s ease, opacity 0.5s ease, transform 1.8s ease;
+    transition: top .9s ease, opacity 1s ease .2s, transform .8s ease;
 }
 
 .above{top:-100vh;}
