--- a/Blog/Blogposts/August-2022/page-layout.css
+++ b/Blog/Blogposts/August-2022/page-layout.css
@@ -5,7 +5,10 @@
 
 body{
     margin: 0; 
-    height: 100vh;
+    min-height: 100vh;
+    min-height: fill-available;
+    min-height: -webkit-fill-available;
+
     width: 100vw;
     display: flex; 
     flex-direction: column; 
@@ -30,7 +33,7 @@ body{
     z-index: 1;
     justify-content: start;
     align-items: center;
-    padding: 1em;
+    padding: 1em .5em;
 }
 
 .progress-parent{
