--- a/Blog/Blogposts/August-2022/page-layout.css
+++ b/Blog/Blogposts/August-2022/page-layout.css
@@ -5,9 +5,7 @@
 
 body{
     margin: 0; 
-    min-height: 100vh;
-    min-height: fill-available;
-    min-height: -webkit-fill-available;
+    height: 100vh;
 
     width: 100vw;
     display: flex; 
