--- a/Blog/Blogposts/August-2022/page-layout.css
+++ b/Blog/Blogposts/August-2022/page-layout.css
@@ -1,5 +1,5 @@
 :root{
-    --clr-progress-bar: rgb(33, 33, 49);
+    --clr-progress-bar: rgba(32, 39, 91, 0.317);
 }
 
 
@@ -37,21 +37,23 @@ body{
 .progress-parent{
     height: 100%;
     background-color: var(--clr-progress-bar);
-    width: 10px;
+    width: 8px;
     border-radius: 2em;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
 }
 .progress{
-    transition: flex-grow .5s ease;
+    transition: flex-grow .8s ease;
 }
 
 .progress-display{
-    border-radius: 50% 5px 5px 50%;
-    width: 20px;
+    border-radius: 1em;
+    width: 8px;
     height: 30px;
     background-color: var(--clr-progress-bar);
+    mix-blend-mode: lighten;
+    background-color: #233748;
 }
 
 
