--- a/Blog/Blogposts/August-2022/page-layout.css
+++ b/Blog/Blogposts/August-2022/page-layout.css
@@ -6,7 +6,6 @@
 body{
     margin: 0; 
     height: 100vh;
-
     width: 100vw;
     display: flex; 
     flex-direction: column; 
@@ -21,13 +20,15 @@ body{
 
 /* Table of content */
 
+.full-height {height: 100vh;}
+
 .table-of-content{
     position: absolute;
     display: flex;
     flex-direction: column;
     top: 0;
     right: 0;
-    height: 100vh;
+
     z-index: 1;
     justify-content: start;
     align-items: center;
