--- a/Blog/Blogposts/August-2022/page-layout.css
+++ b/Blog/Blogposts/August-2022/page-layout.css
@@ -25,14 +25,18 @@ body{
 .table-of-content{
     position: absolute;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     top: 0;
     right: 0;
 
     z-index: 1;
     justify-content: start;
-    align-items: center;
-    padding: 1em .5em;
+    width: 1em;
+    padding: 1em 0;
+
+    border-radius: 5px 0 0 5px;
+
+    transition: width .5s ease, background-color .5s ease;
 }
 
 .progress-parent{
@@ -57,6 +61,11 @@ body{
     background-color: #233748;
 }
 
+.table-of-content:hover, .table-of-content:focus{
+    width: 200px;
+    background-color: #20344190;
+}
+
 
 /* PAGE */
 
@@ -69,7 +78,7 @@ body{
     justify-content: center;
     align-items: center;
     overflow: hidden;
-    padding: 2em;
+    padding: 1em 2em 1em 1em;
 
     transform: scale(.3, .2);
     top: 100vh;
