--- a/Blog/Blogposts/August-2022/page-layout.css
+++ b/Blog/Blogposts/August-2022/page-layout.css
@@ -1,8 +1,3 @@
-:root{
-    --clr-progress-bar: rgba(32, 39, 91, 0.317);
-}
-
-
 body{
     margin: 0; 
     height: 100vh;
@@ -41,12 +36,10 @@ body{
 
 .progress-parent{
     height: 100%;
-    background-color: var(--clr-progress-bar);
-    width: 8px;
+    background-color: rgba(40, 26, 73, 0.31);
     border-radius: 2em;
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
 }
 .progress{
     transition: flex-grow .8s ease;
@@ -54,16 +47,40 @@ body{
 
 .progress-display{
     border-radius: 1em;
-    width: 8px;
+    width: 9px;
     height: 30px;
-    background-color: var(--clr-progress-bar);
     mix-blend-mode: lighten;
-    background-color: #233748;
+    background-color: #0d2640;
+    z-index: 3;
 }
 
 .table-of-content:hover, .table-of-content:focus{
     width: 200px;
-    background-color: #20344190;
+    background-color: #192c49ad;
+}
+
+.table-of-content ol{
+    display: flex;
+    list-style: none;
+    height: 100%;
+    width: 100%;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    margin: 0;
+    font-size: 1.5em;
+}
+
+.table-of-content li{
+    cursor: pointer;
+    white-space: nowrap;
+    width: 100%;
+    color: rgb(214, 194, 194);
+    transition: color .4s ease, padding .4s ease;
+}
+.table-of-content li:hover{
+    color: white;
+    padding-left: 1em;
 }
 
 
@@ -75,8 +92,6 @@ body{
     position: absolute;
     height: 100vh;
     width: 100vw;
-    justify-content: center;
-    align-items: center;
     overflow: hidden;
     padding: 1em 2em 1em 1em;
 
