--- a/Blog/Blogposts/August-2022/skolestart.css
+++ b/Blog/Blogposts/August-2022/skolestart.css
@@ -1,8 +1,21 @@
+:root{
+    --clr-bg-text: rgba(0, 0, 0, 0.078);
+}
+
 .page{
     align-items: center;
     justify-content: space-evenly;
 }
 
+p{
+    max-width: 400px;
+    width: auto;
+    padding: 1em;
+    border-radius: 5px;
+    background: var(--clr-bg-text);
+}
+
+/* #region Uke 34 */
 #uke-34 iframe{
     height: 100%;
     width: 100%;
@@ -11,7 +24,9 @@
 }
 #uke-34 h3 {grid-area: t;}
 #uke-34 p{grid-area: p; max-width: 400px;}
+/* #endregion */
 
+/* #region Uke 35 */
 svg{
     width: 150px;
     cursor: pointer;
@@ -35,3 +50,6 @@ svg:hover #envelope-lid{
 }
 
 #søknader{display: none;}
+/* #endregion */
+
+#goto{cursor: pointer;}
