--- a/Blog/Blogposts/page-layout.css
+++ b/Blog/Blogposts/page-layout.css
@@ -10,6 +10,10 @@ body{
 }
 * {box-sizing: border-box;}
 
+h1{
+    font-size: min(8vw, 5em);
+}
+
 /* Table of content */
 
 .full-height {height: 100vh;}
