--- a/Notes/rhetoric.css
+++ b/Notes/rhetoric.css
@@ -1,3 +1,27 @@
+body{
+    display: grid;
+    
+    margin: 0;
+    padding: 1em;
+
+    grid-gap: 1em;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+}
+
+.introduction, h1{
+    grid-column: 1 / -1;
+    text-align: center;
+}
+
+.term{
+    background: rgb(193, 163, 154);
+    border: 4px solid rgb(110, 84, 74);
+    border-radius: 8px;
+    height: 300px;
+
+    text-align: center;
+}
+
 .term span{
     display: block
 }
