--- a/Notes/rhetoric.css
+++ b/Notes/rhetoric.css
@@ -1,11 +1,25 @@
+:root{
+    --card-clr-primary: rgb(255, 207, 217);
+    --card-clr-accent: rgb(195, 133, 147);
+}
+
+
 body{
+    box-sizing: border-box;
     display: grid;
     
     margin: 0;
     padding: 1em;
 
     grid-gap: 1em;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: 1fr 1fr;
+}
+
+@media screen and (min-width: 820px) {
+    body{
+        padding: 1em 20%;
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    }
 }
 
 .introduction, h1{
@@ -14,14 +28,21 @@ body{
 }
 
 .term{
-    background: rgb(193, 163, 154);
-    border: 4px solid rgb(110, 84, 74);
+    background: var(--card-clr-primary);
+    border: 4px solid var(--card-clr-accent);
     border-radius: 8px;
     height: 300px;
-
+    
     text-align: center;
+
+    padding: 1em;
 }
 
 .term span{
     display: block
+}
+
+
+.argument{
+    grid-column: span 2;
 }
