--- a/Notes/rhetoric.css
+++ b/Notes/rhetoric.css
@@ -1,10 +1,13 @@
 :root{
-    --card-clr-primary: rgb(255, 207, 217);
-    --card-clr-accent: rgb(195, 133, 147);
+    --card-clr-primary: rgb(38, 38, 38);
+    --card-clr-accent: rgb(94, 94, 94);
+    --text-clr-primary: rgb(248, 244, 228);
+    --bgr-clr-primary: rgb(27, 27, 27);
 }
 
 
 body{
+    font-family: sans-serif;
     box-sizing: border-box;
     display: grid;
     
@@ -13,12 +16,13 @@ body{
 
     grid-gap: 1em;
     grid-template-columns: 1fr 1fr;
+    background-color: var(--bgr-clr-primary);
 }
 
 @media screen and (min-width: 820px) {
     body{
         padding: 1em 20%;
-        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
     }
 }
 
@@ -27,15 +31,27 @@ body{
     text-align: center;
 }
 
+h1, h3{font-family: sans;}
+h3{font-size: 2em;}
+
 .term{
     background: var(--card-clr-primary);
-    border: 4px solid var(--card-clr-accent);
-    border-radius: 8px;
+    color: var(--card-clr-accent);
+    border: 1px solid var(--card-clr-accent);
+    border-radius: 1em;
     height: 300px;
     
     text-align: center;
-
     padding: 1em;
+
+    user-select: none;
+    cursor: pointer;
+
+    transition: color 600ms ease;
+}
+
+.term:hover{
+    color: var(--text-clr-primary);
 }
 
 .term span{
