--- a/Notes/rhetoric.css
+++ b/Notes/rhetoric.css
@@ -3,6 +3,8 @@
     --card-clr-accent: rgb(94, 94, 94);
     --text-clr-primary: rgb(248, 244, 228);
     --bgr-clr-primary: rgb(27, 27, 27);
+
+    -webkit-tap-highlight-color: transparent;
 }
 
 
@@ -15,14 +17,22 @@ body{
     padding: 1em;
 
     grid-gap: 1em;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
     background-color: var(--bgr-clr-primary);
 }
 
-@media screen and (min-width: 820px) {
+@media screen and (min-width: 520px) {
     body{
-        padding: 1em 20%;
         grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
+    }
+    .argument{
+        grid-column: span 2;
+    }
+}
+
+@media screen and (min-width: 900px) {
+    body {
+        padding: 1em 20%;
     }
 }
 
@@ -56,9 +66,4 @@ h3{font-size: 2em;}
 
 .term span{
     display: block
-}
-
-
-.argument{
-    grid-column: span 2;
 }
