--- a/Blog/Blogposts/August-2022/skolestart.css
+++ b/Blog/Blogposts/August-2022/skolestart.css
@@ -84,6 +84,15 @@ p{
 }
 #uke-34 p{max-width: 400px;}
 
+@media screen and (min-width: 800px) {
+    #uke-34{
+        display: grid;
+
+        grid-template-columns: 1fr 3fr;
+        grid-template-rows: 1fr 2fr 2fr;
+    }
+}
+
 /* #endregion */
 
 /* #region Uke 35 */
@@ -134,6 +143,3 @@ svg:hover #envelope-lid{
 
 #goto{cursor: pointer;}
 
-.day{
-    color: white;
-}
