--- a/Blog/Blogposts/Høstferie-Juleferie/style.css
+++ b/Blog/Blogposts/Høstferie-Juleferie/style.css
@@ -4,8 +4,7 @@ p, ol, ul{
     padding: 1em;
 }
 li{padding-top: 1rem;}
-img{max-height: 100%;}
-
+img{max-width: 100%; max-height: 100%;}
 *{box-sizing: border-box;}
 
 body{
@@ -22,6 +21,10 @@ body{
     grid-gap: 1em;
 
     grid-template-columns: 1fr 6fr;
+
+    grid-template-areas: 
+    "t t"
+    "s c";
     
     max-height: 100vh;
 }
@@ -36,9 +39,20 @@ body{
     padding: 3em;
 }
 
-#blog-title{grid-column: 1 / 3;}
+.events{
+    grid-area: s;
+}
 
-#uke-41, .slideshow{
-    grid-column: 2;
-    grid-row: 2 / 4;
+.page-title{
+    grid-area: t;
+}
+
+.content{
+    grid-area: c;
+    display: flex;
+    justify-content: space-between;
+}
+
+.slideshow{
+    width: min-content;
 }
