--- a/Blog/Blogposts/Høstferie-Juleferie/style.css
+++ b/Blog/Blogposts/Høstferie-Juleferie/style.css
@@ -4,7 +4,6 @@ p, ol, ul{
     padding: 1em;
 }
 li{padding-top: 1rem;}
-img{max-width: 100%; max-height: 100%;}
 *{box-sizing: border-box;}
 
 body{
@@ -20,13 +19,11 @@ body{
     display: grid;
     grid-gap: 1em;
 
-    grid-template-columns: 1fr 6fr;
+    grid-template-columns: 1fr 3fr;
 
     grid-template-areas: 
     "t t"
     "s c";
-    
-    max-height: 100vh;
 }
 .page>*{
     min-width: 100px;
@@ -53,6 +50,6 @@ body{
     justify-content: space-between;
 }
 
-.slideshow{
-    width: min-content;
+.slideshow img{
+    height: 320px;
 }
