--- a/Blog/Blogposts/Juleferie-April/style.css
+++ b/Blog/Blogposts/Juleferie-April/style.css
@@ -48,9 +48,6 @@ main .week:last-of-type{
     position: relative;
 }
 
-p{
-}
-
 .align-right{align-self: end; text-align: right;}
 
 hr{
@@ -92,4 +89,14 @@ footer {
       radial-gradient(46.96px at 50% -42px,#0000 99%,#000 101%) 50% 21px/84px 100% repeat-x;
     -webkit-mask: var(--mask);
             mask: var(--mask);
+}
+
+#week-52{
+    background-image: url('https://cdn.discordapp.com/attachments/1058068137783865465/1059736083929256006/Geezmo_Beautiful_fireworks_light_up_the_dark_skies._Fjord_in_th_fe3a922f-8887-480c-bcf4-f06038d01dd1.png');
+
+    aspect-ratio: 2/3;
+
+    background-position: center;
+    background-size: cover;
+    color: white;
 }
