--- a/Rykkinn-hundeklubb/style.css
+++ b/Rykkinn-hundeklubb/style.css
@@ -5,25 +5,34 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    font-family: sans-serif;
+
+    background: linear-gradient(rgb(204, 211, 221), rgb(157, 179, 164));
 }
 
 header{
-    height: 20vh;
+    height: 30vh;
 }
 
 .main{
     max-width: 800px;
     display: flex;
     flex-direction: column;
+    margin-bottom: 50vh;
+
+    background-color: rgb(255, 255, 255);
+    padding: 1rem;
 }
 
 .activities{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
-    gap: 1rem 4rem;
+    justify-content: space-evenly;
+    gap: 2rem;
 
     text-align: center;
+
 }
 .activities>span{
     width: 100%;
