--- a/Rykkinn-hundeklubb/style.css
+++ b/Rykkinn-hundeklubb/style.css
@@ -11,19 +11,36 @@ body{
     background: linear-gradient(rgb(204, 211, 221), rgb(157, 179, 164));
 }
 
-header{
-    height: 30vh;
-}
-
 .main{
     max-width: 800px;
     display: flex;
     flex-direction: column;
-    margin-bottom: 50vh;
+    position: relative;
+    margin: 30vh 1rem;
 
     background-color: rgb(255, 255, 255);
     padding: 1rem;
 }
+
+nav{
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
+    gap: .5rem;
+
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    transform: translate(0, -100%);
+    padding: 1rem;
+}
+nav>*{
+    background-color: rgb(243, 239, 239);
+    padding: 5px;
+    border-radius: .5rem;
+}
+
 
 .activities{
     display: flex;
