--- a/Rykkinn-hundeklubb/style.css
+++ b/Rykkinn-hundeklubb/style.css
@@ -1,12 +1,13 @@
+* {box-sizing: content-box;}
+p{margin: 0;}
 img{max-width: 100%;}
 body{
     margin: 0;
-    box-sizing: border-box;
     display: flex;
     flex-direction: column;
     align-items: center;
 
-    font-family: sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
     background: linear-gradient(rgb(204, 211, 221), rgb(157, 179, 164));
 }
@@ -16,10 +17,19 @@ body{
     display: flex;
     flex-direction: column;
     position: relative;
+    gap: 3rem;
+
     margin: 30vh 1rem;
 
     background-color: rgb(255, 255, 255);
-    padding: 1rem;
+    padding: 2rem;
+}
+
+h1{
+    font-weight: lighter;
+    font-size: 2.5em;
+    text-transform: uppercase;
+    margin: 0;
 }
 
 nav{
@@ -49,7 +59,6 @@ nav>*{
     gap: 2rem;
 
     text-align: center;
-
 }
 .activities>span{
     width: 100%;
